snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/maven-metadata.xml.sha512
44d53c487873d26c664d5b10f80a5680a32ce4e92a39830d9d1fa3b38ff55187d3b8bd35524cf483e1209081e45f0969a071073e197c90e56b67a643ea4855ff